Added Robot prefab

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 /Assets/[Rr]obot Kyle/
+/Assets/RPG_FPS_game_assets_industrial/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
