--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /Assets/[Rr]obot Kyle/
 /Assets/RPG_FPS_game_assets_industrial/
 /Assets/Low Poly Guns/
+/Assets/Zombie/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
