Fixed bullets mechanic

--- a/Assets/.gitignore
+++ b/Assets/.gitignore
@@ -77,3 +77,4 @@ crashlytics-build.properties
 /Biomechanical_Mutant.meta
 /Black and white achievements.meta
 /Beautiful Progress Bar Free - CYKO/
+/Beautiful Progress Bar Free - CYKO/
